--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,14 @@ p {
 }
 .login-signup {
   background-color: #2b2b2b;
+  height: 500px;
+  max-width: 375px;
+  width: 74%;
+  border-radius: 20px;
+}
+
+.login-signin {
+  background-color: #2b2b2b;
   height: 400px;
   max-width: 375px;
   width: 74%;
@@ -137,7 +145,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  height: 80vh;
 }
 .login-text h2 {
   color: #121212;
@@ -1860,7 +1868,6 @@ body {
     text-overflow: ellipsis;
     max-width: 170px;
     height: 50px;
-    /* background-color: rebeccapurple; */
   }
   .card-sell {
     gap: 50px;
@@ -1912,5 +1919,30 @@ body {
   }
   .card-table tbody tr td:last-child {
     width: 240px;
+  }
+}
+
+.nothing-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: 500;
+  color: #555;
+  margin-top: 20px;
+  opacity: 0;
+  animation: fadeSlideIn 0.8s ease-in-out forwards;
+}
+
+@keyframes fadeSlideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
