--- a/src/App.css
+++ b/src/App.css
@@ -721,6 +721,7 @@ body {
 }
 
 .first-step h4 {
+  font-size: 18px;
   text-align: center;
 }
 
@@ -728,6 +729,7 @@ body {
   position: absolute;
   left: 1rem;
   top: 1rem;
+  font-size: 10px;
 }
 
 .first-step p:nth-of-type(2) {
@@ -1026,12 +1028,23 @@ body {
   position: relative;
 }
 
+.add-to-cart button {
+  width: 200px;
+}
+
 .card-description {
   gap: 1rem;
 }
 
 .card-stars i:not(:last-child) {
   color: yellow;
+}
+
+.email-text {
+  word-wrap: break-word;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .basket-section {
@@ -1104,6 +1117,35 @@ body {
 .ps-5 {
   position: relative;
   top: 4rem;
+}
+
+.language-select {
+  appearance: none;
+  background-color: black;
+  color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 1px 6px;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.language-select:hover {
+  background-color: #e9e9e9;
+  color: black;
+  border-color: #bbb;
+}
+
+.language-select:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+.language-select option {
+  background-color: #fff;
+  color: #333;
+  padding: 2px 5px;
 }
 
 @media screen and (min-width: 375px) and (max-width: 600px) {
@@ -1274,6 +1316,10 @@ body {
 }
 
 @media screen and (min-width: 601px) and (max-width: 768px) {
+  .language-select {
+    font-size: 14px;
+    padding: 8px 12px;
+  }
   .slider-container {
     max-width: 780px;
     height: 55vh;
@@ -1571,7 +1617,7 @@ body {
 @media screen and (min-width: 992px) {
   .first-step {
     max-width: 300px;
-    height: 170px;
+    height: 187px;
   }
   .steps {
     display: grid;
@@ -1840,16 +1886,6 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
-  .card-sell-wrapper {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 390px);
-    /* margin: 0; */
-    padding: 0;
-    margin-left: 2rem;
-    row-gap: 100px;
-    /* background-color: rebeccapurple; */
-  }
   .card-inner-img img {
     width: 130px;
     height: 180px;
@@ -1934,6 +1970,17 @@ body {
   margin-top: 20px;
   opacity: 0;
   animation: fadeSlideIn 0.8s ease-in-out forwards;
+}
+
+@media screen and (min-width: 1080px) {
+  .card-sell-wrapper {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    margin-left: 2rem;
+    row-gap: 100px;
+  }
 }
 
 @keyframes fadeSlideIn {
