--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .consoles-section {
-  padding-bottom: 35px;
+  padding-bottom: 45px;
 }
 .card-title {
   width: 200px;
@@ -216,6 +216,17 @@ body {
 .search-login i {
   color: #bcbcbc;
   cursor: pointer;
+}
+.product-price {
+  width: 120px;
+}
+
+.product-price p {
+  width: 110px;
+}
+
+.header-links {
+  width: 540px;
 }
 
 .header-links ul {
@@ -888,7 +899,6 @@ body {
 }
 
 .game-verse-logo {
-  width: 350px;
   height: 100px;
   display: grid;
   place-content: center;
@@ -964,10 +974,6 @@ body {
 .opacity-visible {
   display: block;
 }
-
-.help-need h4 {
-  margin-right: 5.9rem;
-}
 /* 
 .legal-privacy-height {
   height: 200px;
@@ -1010,17 +1016,14 @@ body {
 }
 
 .card-price .normal-price {
-  gap: 2rem;
+  gap: 0.6rem;
   align-items: center;
 }
 
 .card-price .normal-price h4 {
   color: green;
-  /* margin-bottom: 17px; */
-  font-size: 1.3rem;
+  font-size: 16px;
   align-items: center;
-  /* padding: 0; */
-  /* margin: 10px; */
 }
 
 .add-to-cart {
@@ -1038,6 +1041,27 @@ body {
 
 .card-stars i:not(:last-child) {
   color: yellow;
+}
+
+.badge-custom {
+  position: absolute;
+  background-color: #23da87;
+  color: #000;
+  border-radius: 50%;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  top: -17px;
+  right: -8px;
+  width: 15px;
+  height: 20px;
+  line-height: 20px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.normal-price {
+  width: 240px;
 }
 
 .email-text {
@@ -1614,6 +1638,15 @@ body {
   }
 }
 
+@media screen and (min-width: 992px) and (max-width: 1330px) {
+  .search-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-content: center;
+    row-gap: 20px;
+  }
+}
+
 @media screen and (min-width: 992px) {
   .first-step {
     max-width: 300px;
@@ -1680,7 +1713,7 @@ body {
     background-color: inherit;
   }
   .legal-wrapper {
-    width: 300px;
+    width: 250px;
   }
   .footer-info {
     gap: 0;
@@ -1749,19 +1782,6 @@ body {
   }
   .load-more-consoles {
     padding-top: 2rem;
-  }
-  .consoles-section {
-    padding-bottom: 25px;
-  }
-  .search-grid {
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center; */
-    display: grid;
-    grid-template-columns: repeat(4, 300px);
-    place-content: center;
-    row-gap: 20px;
   }
   .search-title {
     color: white;
@@ -1914,6 +1934,9 @@ body {
   .about-us-word {
     cursor: pointer;
   }
+  .about-us-word p {
+    font-size: 14px;
+  }
   .line-about-us img {
     height: 10px;
   }
@@ -1972,11 +1995,15 @@ body {
   animation: fadeSlideIn 0.8s ease-in-out forwards;
 }
 
-@media screen and (min-width: 1080px) {
+.total-price h2 {
+  font-size: 25px;
+}
+
+@media screen and (min-width: 1331px) {
   .card-sell-wrapper {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 400px);
     justify-content: center;
     margin-left: 2rem;
     row-gap: 100px;
